--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,12 @@
 {
   "version": 2,
   "name": "responsive-dashboard",
-  "builds": [
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
@@ -26,10 +19,5 @@
         }
       ]
     }
-  ],
-  "functions": {
-    "app/api/**": {
-      "maxDuration": 30
-    }
-  }
+  ]
 }
